package tms.common.protocol.message;
message LoginRequest {
  required string name = 1;
  required string password_hash = 2;
}

