package tms.common.protocol.message;
import "record.proto";
message ReadRecordsResponse {
  repeated Record record = 1;
}